--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,24 +20,47 @@
           <td>
             <% if @index.favorited_by?(current_user) %>
             <p>
-              <%= link_to book_favorites_path(@index), method: :delete do %>
-                ♥<%= @index.favorites.count %> いいね
+              <%= link_to book_favorites_path(@index), method: :delete, class: "text-danger" do %>
+                ♥<%= @index.favorites.count %>
               <% end %>
             </p>
           <% else %>
           <p>
             <%= link_to book_favorites_path(@index), method: :post do %>
-              ♡<%= @index.favorites.count %> いいね
+              ♡<%= @index.favorites.count %>
             <% end %>
           </p>
           <% end %>
           </td>
+          <td>コメント件数：<%= @index.book_comments.count %></td>
           <% if @index.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@index), class: "btn btn-sm btn-success edit_book_#{@index.id}" %></td>
             <td><%= link_to 'Destroy', book_path(@index), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@index.id}"%></td>
           <% end %>
         </tr>
       </table>
+      <div>
+        <% @index.book_comments.each do |comment| %>
+        <div>
+          <%= link_to user_path(comment.user) do %>
+            <%= attachment_image_tag comment.user, :profile_image, :fill, 30, 30, fallback: "no-image-icon.jpg" %><br>
+            <%= comment.user.name %>
+          <% end %>
+          <%= comment.comment %>
+        </div>
+          <% if comment.user == current_user %>
+            <div>
+              <%= link_to "削除する", book_book_comment_path(comment.book, comment), method: :delete, class: "text-danger" %>
+            </div>
+          <% end %>
+        <% end %>
+      </div>
+      <div>
+        <%= form_with(model:[@index, @book_comment], local: true) do |f| %>
+          <%= f.text_area :comment, rows:'5', placeholder: "コメント", class: "form-control" %>
+          <%= f.submit "送信", class: "mt-3" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
