--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,6 +11,19 @@
       <tr>
         <td><%= attachment_image_tag user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg" %></td>
         <td><%= user.name %></td>
+        <% if user != current_user %>
+          <% if current_user.following?(user) %>
+          <td>
+            <%= link_to "フォロー外す", user_relationship_path(user.id,current_user.id),method: :delete %>
+          </td>
+          <% else %>
+          <td>
+            <%= link_to "フォローする", user_relationships_path(user.id),method: :post %>
+          </td>
+          <% end %>
+        <% else %>
+          <td></td>
+        <% end %>
         <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
