--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,6 +8,39 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>
+      フォロー数：
+    </th>
+    <th>
+      <%= link_to user_followings_path(user) do %>
+        <%= user.followings.count %>
+      <% end %>
+    </th>
+  </tr>
+  <tr>
+    <th>
+      フォロワー数：
+    </th>
+    <th>
+      <%= link_to user_followers_path(user) do %>
+        <%= user.followers.count %>
+      <% end %>
+    </th>
+  </tr>
+  <% if user != current_user %>
+    <% if current_user.following?(user) %>
+    <tr>
+      <th>
+        <%= link_to "フォロー外す", user_relationship_path(user.id), method: :delete %>
+      </th>
+    <% else %>
+      <th>
+        <%= link_to "フォローする", user_relationships_path(user.id),method: :post %>
+      </th>
+    </tr>
+    <% end %>
+  <% end %>
 </table>
 
 <div class='row'>
