--- a/app/views/relationships/_follow.html.erb
+++ b/app/views/relationships/_follow.html.erb
@@ -28,7 +28,7 @@
           </table>
         <% end %>
       <% else %>
-        <p>ユーザーはいません</p>
+        <p class="text-center mt-5 text-danger">ユーザーはいません</p>
       <% end %>
     </div>
   </div>
