--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -31,7 +31,7 @@
           </p>
           <% end %>
         </td>
-        <td>コメント数：<%= book.book_comments.count %></td>
+        <td><p class="far fa-comments"></p><%= book.book_comments.count %>件</td>
       </tr>
     <% end %>
   </tbody>
