--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,20 +17,8 @@
           </td>
           <td><%= link_to @index.title, book_path(@index) %></td>
           <td><%= @index.body %></td>
-          <td>
-            <% if @index.favorited_by?(current_user) %>
-            <p>
-              <%= link_to book_favorites_path(@index), method: :delete, class: "text-danger" do %>
-                ♥<%= @index.favorites.count %>
-              <% end %>
-            </p>
-          <% else %>
-          <p>
-            <%= link_to book_favorites_path(@index), method: :post do %>
-              ♡<%= @index.favorites.count %>
-            <% end %>
-          </p>
-          <% end %>
+          <td id="favorite_buttons_<%= @index.id %>">
+            <%= render "favorites/favorite", book: @index %>
           </td>
           <td>コメント件数：<%= @index.book_comments.count %></td>
           <% if @index.user == current_user %>
