--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,7 +17,7 @@
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
         <td id="favorite_buttons_<%= book.id %>">
-          <%= render "favorites/favorite", book: book %>
+          <%= render "favorites/favorite-btn", book: book %>
         </td>
         <td><p class="far fa-comments"></p><%= book.book_comments.count %>件</td>
       </tr>
