--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,34 +20,17 @@
           <td id="favorite_buttons_<%= @index.id %>">
             <%= render "favorites/favorite-btn", book: @index %>
           </td>
-          <td>コメント件数：<%= @index.book_comments.count %></td>
           <% if @index.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@index), class: "btn btn-sm btn-success edit_book_#{@index.id}" %></td>
             <td><%= link_to 'Destroy', book_path(@index), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@index.id}"%></td>
           <% end %>
         </tr>
       </table>
-      <div>
-        <% @index.book_comments.each do |comment| %>
-        <div>
-          <%= link_to user_path(comment.user) do %>
-            <%= attachment_image_tag comment.user, :profile_image, :fill, 30, 30, fallback: "no-image-icon.jpg" %><br>
-            <%= comment.user.name %>
-          <% end %>
-          <%= comment.comment %>
-        </div>
-          <% if comment.user == current_user %>
-            <div>
-              <%= link_to "削除する", book_book_comment_path(comment.book, comment), method: :delete, class: "text-danger" %>
-            </div>
-          <% end %>
-        <% end %>
+      <div id="comments_area">
+        <%= render 'book_comments/post_comments', index: @index %>
       </div>
-      <div class="mt-4">
-        <%= form_with(model:[@index, @book_comment], local: true) do |f| %>
-          <%= f.text_area :comment, rows:'5', placeholder: "コメント", class: "form-control" %>
-          <%= f.submit "送信", class: "mt-3" %>
-        <% end %>
+      <div class="mt-4" id="new-comment">
+        <%= render 'book_comments/form', index: @index, book_comment: @book_comment %>
       </div>
     </div>
   </div>
