--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,6 +4,7 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
+      <th>評価</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -11,11 +12,12 @@
     <% books.each do |book| %>
       <tr>
         <td><%= link_to user_path(book.user) do %>
-          <%= attachment_image_tag @user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg" %>
+          <%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg" %>
           <% end %>
         </td>
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        <td class="book-evaluation" data-score="<%= book.evaluation %>"></td>
         <td id="favorite_buttons_<%= book.id %>">
           <%= render "favorites/favorite-btn", book: book %>
         </td>
@@ -24,3 +26,12 @@
     <% end %>
   </tbody>
 </table>
+<script>
+  $('.book-evaluation').raty({
+    readOnly: true,
+    score: function() {
+      return $(this).attr('data-score');
+    },
+    path: '/assets/'
+  });
+</script>
