--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,7 +6,7 @@
       <h2 class="mt-3">New book</h2>
       <%= render 'form', book: @book %>
     </div>
-    <div class='col-md-8 offset-md-1'>
+    <div class='col-md-9'>
   		<h2>Book detail</h2>
   		<table class='table'>
   		  <tr>
@@ -20,12 +20,22 @@
           <td id="favorite_buttons_<%= @index.id %>">
             <%= render "favorites/favorite-btn", book: @index %>
           </td>
+          <td class="book-evaluation" data-score="<%= @index.evaluation %>"></td>
           <% if @index.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@index), class: "btn btn-sm btn-success edit_book_#{@index.id}" %></td>
             <td><%= link_to 'Destroy', book_path(@index), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@index.id}"%></td>
           <% end %>
         </tr>
       </table>
+      <script>
+        $('.book-evaluation').raty({
+          readOnly: true,
+          score: function() {
+            return $(this).attr('data-score');
+          },
+          path: '/assets/'
+        });
+      </script>
       <div id="comments_area">
         <%= render 'book_comments/post_comments', index: @index %>
       </div>
