--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -5,6 +5,7 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
+      <th>カテゴリー</th>
       <th>評価</th>
       <th colspan="3"></th>
     </tr>
@@ -18,6 +19,7 @@
         </td>
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        <td><%= book.category %></td>
         <td class="book-evaluation" data-score="<%= book.evaluation %>"></td>
         <td id="favorite_buttons_<%= book.id %>">
           <%= render "favorites/favorite-btn", book: book %>
