--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -11,7 +11,7 @@
   <div class="form-group">
     <%= f.label :category %>
     <div>
-      <%= f.select :category, [["小説"], ["ライトノベル"], ["実用書"], ["その他"]] %>
+      <%= f.text_field :category %>
     </div>
   </div>
   <div id="evaluate_stars">
