--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -19,7 +19,7 @@
         </td>
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
-        <td><%= link_to book.category, search_book_path(keyword: book.category) %></td>
+        <td><%= link_to book.category, search_path(keyword: book.category, range: '3') %></td>
         <td class="book-evaluation" data-score="<%= book.evaluation %>"></td>
         <td id="favorite_buttons_<%= book.id %>">
           <%= render "favorites/favorite-btn", book: book %>
