--- a/app/views/searchs/search.html.erb
+++ b/app/views/searchs/search.html.erb
@@ -6,6 +6,7 @@
      <th></th>
      <th>Title</th>
      <th>Opinion</th>
+     <th>category</th>
      <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,11 +24,12 @@
        <%= link_to book.title, book, class: "book_#{book.id}" %>
       </td>
       <td><%= book.body %></td>
+      <td><%= link_to book.category, search_path(keyword: book.category, range: '3') %></td>
      </tr>
      <% end %>
   </tbody>
 
-  <% else %>
+  <% elsif @range == '1' %>
   <thead>
      <tr>
       <th>image</th>
@@ -46,4 +48,34 @@
     <% end %>
    </tbody>
    <% end %>
+
+   <% if @range == '3' %>
+  <thead>
+    <tr>
+     <th></th>
+     <th>Title</th>
+     <th>Opinion</th>
+     <th>category</th>
+     <th colspan="3"></th>
+    </tr>
+  </thead>
+
+
+  <tbody>
+     <% @book.each do |book| %>
+     <tr>
+      <td>
+       <%= link_to(book.user) do %>
+       <%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %>
+       <% end %>
+      </td>
+      <td>
+       <%= link_to book.title, book, class: "book_#{book.id}" %>
+      </td>
+      <td><%= book.body %></td>
+      <td><%= link_to book.category, search_path(keyword: book.category, range: '3') %></td>
+     </tr>
+     <% end %>
+  </tbody>
+  <% end %>
  </table>
