--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -13,6 +13,10 @@
           <%= f.label :opinion %>
           <%= f.text_area :body, class: 'form-control book_body' %>
         </div>
+        <div class="form-group">
+          <%= f.label :category %>
+          <%= f.text_field :category, class: "form-control book_category" %>
+        </div>
         <div class="book-evaluation" data-score="<%= @book.evaluation %>">
         </div>
         <div class="form-group mt-3">
