--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -25,6 +25,9 @@
           <%= render "favorites/favorite-btn", book: book %>
         </td>
         <td><p class="far fa-comments"></p><%= book.book_comments.count %>件</td>
+        <td>
+          <p class="far fa-eye"></p><%= book.impressions_count %>
+        </td>
       </tr>
     <% end %>
   </tbody>
